# chart-js-rs

./: .gitignore  Cargo.toml  README.md  build.rs  build_example.sh  chart_js_rs_example_bg.wasm  index.html  regenerate_types.sh  typedoc.json
.github/workflows/: fmt.yml
api/: Cargo.toml
api/src/: lib.rs  line.rs  types.rs
api/src/types/: adapters.rs  animation.rs  basic.rs  color.rs  geometric.rs  index.esm.rs  layout.rs
example/: chart_js_rs_example.js  chart_js_rs_example_bg.wasm  index.html
example/src/: lib.rs
examples/: Cargo.toml  chart_js_rs_example.js  chart_js_rs_example_bg.wasm  index.html  worker_imports.js
examples/snippets/chart-js-rs-0da7ccc98531ebc5/js/: exports.js
examples/snippets/chart-js-rs-3fe983be4c70778a/: inline0.js
examples/snippets/chart-js-rs-cf5c7035784f1a3b/: inline0.js
examples/snippets/chart-js-rs-e417185604eb4a58/: inline1.js  inline2.js
examples/src/: lib.rs  utils.rs
js/: exports.js  worker_shim.js
src/: bar.rs  coordinate.rs  doughnut.rs  exports.rs  functions.rs  lib.rs  line.rs  pie.rs  scatter.rs  traits.rs  types.rs  utils.rs  worker.rs
src/objects/: chart_objects.rs  helper_objects.rs  methods.rs  mod.rs
transpiler/: Cargo.toml
transpiler/src/: main.rs
workdir/: output.json  package-lock.json  package.json
workdir/output/: adapters.json  animation.json  basic.json  color.json  geometric.json  index.esm.json  layout.json
