[package]
name = "chart-js-rs"
version = "0.0.43"
edition = "2021"
authors = ["Billy Sheppard", "Luis Moreno"]
license = "Apache-2.0"
keywords = ["javascript", "dom", "wasm", "charts"]
categories = ["gui", "web-programming", "wasm"]
readme = "README.md"
description = "Chart JS API for Rust WebAssembly"
repository = "https://github.com/Billy-Sheppard/chart-js-rs"
homepage = "https://github.com/Billy-Sheppard/chart-js-rs"

[dependencies]
gloo-console = { version = "0.3" }
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3.64"
rust_decimal = "1.34"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
thiserror = "1"
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
uuid = { version = "1.10.0", features = ["v4"] }

[workspace]
members = ["examples"]

[build-dependencies]
heck = "0.5.0"
itertools = "0.13.0"
quote = "1.0.37"
proc-macro2 = "1.0.86"
syn = { features = ["parsing", "full"], version = "2.0.79" }
