[package]
name = "chart-js-rs"
version = "0.0.49"
edition = "2021"
authors = ["Billy Sheppard", "Luis Moreno"]
license = "Apache-2.0"
keywords = ["javascript", "dom", "wasm", "charts"]
categories = ["gui", "web-programming", "wasm"]
readme = "README.md"
description = "Chart JS API for Rust WebAssembly"
repository = "https://github.com/Billy-Sheppard/chart-js-rs"
homepage = "https://github.com/Billy-Sheppard/chart-js-rs"

[dependencies]
gloo-console = { version = "0.3" }
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3.77"
rust_decimal = "1.34"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
thiserror = "2.0.12"
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
uuid = { version = "1.15.1", features = ["v4", "js"] }

[workspace]
members = ["examples"]

[build-dependencies]
heck = "0.5.0"
itertools = "0.14.0"
quote = "1.0.39"
proc-macro2 = "1.0.94"
syn = { features = ["parsing", "full"], version = "2.0.99" }
