[package]
name = "chart-js-rs"
version = "0.0.58"
edition = "2021"
authors = ["Billy Sheppard", "Luis Moreno"]
license = "Apache-2.0"
keywords = ["javascript", "dom", "wasm", "charts"]
categories = ["gui", "web-programming", "wasm"]
readme = "README.md"
description = "Chart JS API for Rust WebAssembly"
repository = "https://github.com/Billy-Sheppard/chart-js-rs"
homepage = "https://github.com/Billy-Sheppard/chart-js-rs"

[dependencies]
gloo-console = { version = "0.3" }
gloo-utils = { version = "0.2", features = ["serde"] }
js-sys = "0.3.77"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde-wasm-bindgen = "0.6"
wasm-bindgen = { version = "0.2.101", features = ["serde-serialize"] }
uuid = { version = "1.17.0", features = ["v4", "js"] }
web-sys = { version = "0.3.77", optional = true, features = [
    "DomRect",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "WorkerOptions",
    "WorkerType",
] }
tokio = { version = "1.47.1", features = ["sync"], optional = true }
itertools = "0.14.0"

[workspace]
members = ["examples"]

[build-dependencies]
heck = "0.5.0"
itertools = "0.14.0"
quote = "1.0.40"
proc-macro2 = "1.0.95"
syn = { features = ["parsing", "full"], version = "2.0.106" }

[features]
default = ["workers"]
workers = ["dep:web-sys", "dep:tokio"]
