[package]
authors = ["Billy Sheppard <billysheppard@rmhedge.com>"]
name = "chart-js-rs-example"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = { version = "*", default-features = false }
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = { version = "*", default-features = false }
web-sys = { version = "*", default-features = false }
js-sys = { version = "*", default-features = false }
futures-signals = { version = "*", default-features = false }
gloo = { version = "*" }
console_error_panic_hook = { version = "*", default-features = false }
rand = { version = "*" }
getrandom = { version = "*", features = ["js"] }
chart-js-rs = { path = "../" }
itertools = "*"
