[package]
authors = ["Billy Sheppard <billysheppard@rmhedge.com>"]
name = "chart-js-rs-example"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chart-js-rs = { path = "../" }
console_error_panic_hook = { version = "*", default-features = false }
dominator = { version = "*", default-features = false }
futures-signals = { version = "*", default-features = false }
getrandom = { version = "*", features = ["js"] }
gloo = { version = "*" }
itertools = "*"
js-sys = { version = "*", default-features = false }
rand = { version = "*" }
serde_json = "*"
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = { version = "*", default-features = false }
web-sys = { version = "*", default-features = false }
